--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="flutter_matkapaivakirja"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+                <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBeLoXld2-QtkkIckCKq4jC4YLnN5yU6pI"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -23,6 +29,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
