--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path_provider: ^2.1.5
   provider: ^6.1.2
   firebase_ui_auth: ^1.16.1
+  firebase_storage: ^12.4.4
   http: ^1.3.0
 
 dev_dependencies:
