--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_ui_auth: ^1.16.1
   firebase_storage: ^12.4.4
   http: ^1.3.0
+  audioplayers: ^6.4.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/ding.mp3
+   
 
   # To add assets to your application, add an assets section, like this:
   # assets:
