--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:icon="@mipmap/ic_launcher">
 
                 <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyBeLoXld2-QtkkIckCKq4jC4YLnN5yU6pI"/>
+               android:value="${GOOGLE_MAPS_API_KEY}"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
