--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  
+  flutter_dotenv: ^5.1.0
 
 
   flutter:
@@ -78,6 +78,7 @@ flutter:
 
   assets:
     - assets/ding.mp3
+    - .env
    
 
   # To add assets to your application, add an assets section, like this:
